# ml-projeto-regressao

./: app.py  pyproject.toml  testes.ipynb
