[tool.poetry]
name = "projeto-regresao-linear"
version = "0.1.0"
description = ""
authors = ["Gabriel Munakata <gabrielyuto2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.40.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
